Added Database related code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=payupapp
+
+
+spring.datasource.url=jdbc:postgresql://payup-db-prototype.cp8om8wm8qxv.ap-southeast-2.rds.amazonaws.com:5432/payup-db-prototype
+spring.datasource.username=postgres
+spring.datasource.password=Deathwalker29
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate / JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql=TRACE
