--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,17 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope> <!-- or "optional" -->
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- PostgreSQL JDBC Driver -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
