--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=payupapp
 
 
-spring.datasource.url=jdbc:postgresql://payup-db-prototype.cp8om8wm8qxv.ap-southeast-2.rds.amazonaws.com:5432/payup-db-prototype
+# change DB url, username, password according to you
+spring.datasource.url=jdbc:postgresql://localhost:5432/payup-db
 spring.datasource.username=postgres
-spring.datasource.password=Deathwalker29
+spring.datasource.password=linux123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate / JPA
